dealing with interference after 1C

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -1558,22 +1558,23 @@ suit then it asks for the lead of a different suit.
 \begin{itemize}
 \item 1$\clubsuit$-(X) (penalty interest (showing 16+):
 	\begin{itemize}
-   \item Redouble creates a game-force, and indicates that the double may not have been 
-      a winning action.
-   \item Pass forces redouble; either to play or with a two-suiter not including clubs.
+   \item Redouble shows either diamonds or the majors
+   \item Pass forces redouble; either to play or with diamonds and a major. Can be pulled rather than XX with an unsuitable hand for clubs.
    \item 1$\diamondsuit$/1$\heartsuit$ are transfers to 1$\heartsuit$/1$\spadesuit$.  Note that opener may pass these if holding a 5-card 
       suit.
 	\end{itemize}
 \item 1$\clubsuit$-(X) (showing $\clubsuit$):
 	\begin{itemize}
-   \item Redouble creates a game-force; passes are now forcing and doubles are for penalty.
    \item Pass shows a weak hand, with nowhere in particular to play.
+   \item Redouble creates a game-force; passes are now forcing and doubles are for penalty.
+	\item 1D shows some values (6-9), any shape
    \item Suit bids are natural, 10--15, and promise 4 cards.
    \item 1NT shows a balanced hand, 10--15, with a club stop.
 	\end{itemize}
 \item 1$\clubsuit$-(X) (takeout):
 	\begin{itemize}
    \item Redouble still creates a forcing pass situation.
+	\item 1D shows some values (6-9), any shape
    \item Ask opponents ``takeout of what, exactly?".
    \item 1NT cannot show a stopper in any particular suit.
 	\end{itemize}
@@ -1631,6 +1632,8 @@ suit then it asks for the lead of a different suit.
 	\end{itemize}
    \item Double is penalties.
 \end{itemize}
+
+\item 1$\clubsuit$-(P)-1 any-X: XX shows a maximum and 4 cards in that suit.
 
 \item 1$\clubsuit$-(P)-1$\diamondsuit$-(anything): it's a good idea to subside quietly, however, double is takeout below 2NT, penalties above.
 
