change suction escape and responses to 2-red

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -654,8 +654,8 @@ weak takeout.
       \item 3$\clubsuit$ = two-suited.
       \item 3$\diamondsuit$ = GF opening.
       \item 3$\heartsuit$ = dire, single-suited.
-      \item 3$\spadesuit$ = decent, single-suited.
-      \item 3NT = top-of-range hearts.
+      \item 3$\spadesuit$ = good, single-suited, points spread.
+      \item 3NT = good, single-suited, running suit
 		\end{itemize}
 	\item 3$\diamondsuit$ = GF enquiry
 	\end{itemize}
@@ -686,8 +686,8 @@ weak takeout.
       \item 3$\clubsuit$ = two-suited.
       \item 3$\diamondsuit$ = dire, single-suited.
       \item 3$\heartsuit$ = GF opening.
-      \item 3$\spadesuit$ = decent, single-suited.
-      \item 3NT = top-of-range spades.
+      \item 3$\spadesuit$ = good, single-suited, points spread.
+      \item 3NT = good, single-suited, running suit.
 		\end{itemize}
 	\item 3$\heartsuit$ = GF enquiry
 	\end{itemize}
@@ -955,7 +955,7 @@ available. Either in a suit if one has been agreed or for no-trumps.
 After a direct seat double we play a modified form of suction as the escape after 1NT-X:
 
 \begin{itemize}
-\item Pass forces XX, to play or weak with a two-suiter, not the reds or the majors
+\item Pass forces XX, to play or weak with clubs and another
 	\begin{itemize}
 	\item XX forced
 		\begin{itemize}
@@ -980,16 +980,9 @@ After a direct seat double we play a modified form of suction as the escape afte
 		\item 2$\heartsuit$ with the majors
 		\end{itemize}
 	\end{itemize}
-\item 2$\diamondsuit$ puppets 2$\heartsuit$, weak with hearts
-	\begin{itemize}
-	\item Pass with 5 diamonds
-	\item 2$\heartsuit$ all other hands
-	\end{itemize}
-\item 2$\heartsuit$ puppets 2$\spadesuit$, weak with spades
-	\begin{itemize}
-	\item Pass with 5 hearts
-	\item 2$\spadesuit$ all other hands
-	\end{itemize}
+\item 2$\diamondsuit$ is weak with diamonds and spades
+\item 2$\heartsuit$ is weak with hearts
+\item 2$\spadesuit$ is weak with spades
 \end{itemize}
 
 This defence is played a level higher in the rare case of 2NT being doubled for
