system file updates

--- a/defences.tex
+++ b/defences.tex
@@ -20,7 +20,7 @@ defences to our system, but there are probably several better ones.
 	\begin{itemize}
 	\item Defend the same as you would a strong (e.g. precision) club
 	\end{itemize}
-\item 1$\heartsuit$
+\item 1$\heartsuit$ (Level 5 only)
 	\begin{itemize}
 	\item X = a heart overcall
 	\item 1$\spadesuit$ = takeout of spades
@@ -29,7 +29,7 @@ defences to our system, but there are probably several better ones.
 	\item 2$\spadesuit$ = whatever a cue of a natural 1 spade would mean 
 	\item Jump bids = normal jump-overcall range
 	\end{itemize}
-\item 1$\spadesuit$
+\item 1$\spadesuit$ (Level 5 only)
 	\begin{itemize}
 	\item X = takeout of hearts
 	\item 1N = normal 1N overcall range showing a heart stop
@@ -38,7 +38,7 @@ defences to our system, but there are probably several better ones.
 	\item Jump bids = normal jump-overcall range
 	\end{itemize}
 
-\item 1NT (Artificial)
+\item 1NT (Artificial only)
 	\begin{itemize}
 	\item X = clubs and diamonds
 	\item 2$\clubsuit$/$\diamondsuit$ = natural overcall
