--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -43,11 +43,10 @@
 
 \section*{Notes from system card}
 \begin{tabular*}{\textwidth}{ll@{\extracolsep{\fill}}r}
-1. & 2NT encrypted raise & \pageref{note:1} \\
+1. & 2NT good raise & \pageref{note:1} \\
 2. & Jump fit & \pageref{note:2} \\
 4. & 1$\spadesuit$ negative & \pageref{note:4} \\
-5. & 1N F1 response & \pageref{note:5} \\
-6. & 3M/4m splinter & \pageref{note:6} \\
+6. & splinter & \pageref{note:6} \\
 7. & 2N enquiry responses & \pageref{note:7} \\
 8. & 3$\clubsuit$ 5-card puppet Stayman & \pageref{note:8} \\
 8a. & 2$\clubsuit$ 5-card puppet Keri & \pageref{note:8a} \\
@@ -77,10 +76,13 @@ elsewhere in this document will be given as \xref{sec:resp:2level}.
 
 Allowed systems are determined by the Regulating Authority for a given event.
 This system is primarily played under the auspices of the English Bridge Union
-and is allowed at Level 4 \orange{9B}, which is the standard tournament level
-in England. Events not directly run by the EBU may have other restrictions.
-References to the Orange Book sections allowing each convention at Level 4 are
-given throughout the document.
+who have recently split the highest level into Level 4 and Level 5. The
+majority of this system is allowed at Level 4 \orange{9B}, which is the
+standard tournament level in England. The major suit openings are only allowed
+at Level 5 \orange{9F} and hence alternatives are provided for Level 4 events.
+Events not directly run by the EBU may have other restrictions.  References to
+the Orange Book sections allowing each convention at Level 4 or 5 are given
+throughout the document.
 
 \subsubsection{WBF classification}
 
@@ -159,10 +161,10 @@ One of the following \orange{11C11}:
 
 16+, not game forcing \orange{11C12}. If balanced or semi-balanced then 16--23. If a two suiter (5422 or longer) or three suiter (4441 / 5440) then 16--GF. If a single suiter (6332 or longer) then 16--GF. (16--GF here is 'less than a 3-loser hand').
 
-\paragraph{1$\heartsuit$}
+\paragraph{1$\heartsuit$ (Level 5)}
 
 Varies depending upon position and vulnerability, but always 10--15 points, not
-balanced and promises 4 spades \orange{11C14}.
+balanced and promises 4 spades \orange{11R}.
 
 First, second or third seat non-vulnerable (events with 7+ boards per round only):
 \begin{itemize}
@@ -174,11 +176,30 @@ All other positions and vulnerabilities:
 \item 5+ spades, 0-3 hearts, may contain a longer minor (possible canape).
 \end{itemize}
 
-\newpage
+\paragraph{1$\heartsuit$ (Level 4)}
 
-\paragraph{1$\spadesuit$}
+Varies depending upon position and vulnerability, but always 10--15 points, not
+balanced and promises 4 hearts \orange{11C15}.
 
-10--15 points, not balanced. 5+ hearts, 0-3 spades \orange{11C14}, may have a longer minor (possible canape).
+First, second or third seat non-vulnerable (events with 7+ boards per round only):
+\begin{itemize}
+\item 4+ hearts, may be longer spades or a minor (possible canape), but will always have 5 hearts or 4 spades.
+\end{itemize}
+
+All other positions and vulnerabilities:
+\begin{itemize}
+\item 5+ hearts, 0-3 spades, may contain a longer minor (possible canape).
+\end{itemize}
+
+
+\paragraph{1$\spadesuit$ (Level 5)}
+
+10--15 points, not balanced. 5+ hearts, 0-3 spades \orange{11R}, may have a longer minor (possible canape).
+
+
+\paragraph{1$\spadesuit$ (Level 4)}
+
+10--15 points, not balanced. 5+ spades, 0-3 hearts \orange{11C15}, may have a longer minor (possible canape).
 
 \paragraph{1NT}
 
@@ -473,7 +494,7 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 		\end{itemize}
 	\end{itemize}
 
-\item 1$\heartsuit$ (if denying $\heartsuit$):
+\item 1$\heartsuit$ (if denying $\heartsuit$, Level 5):
 	\begin{itemize}
 \label{note:4}
    \item 1$\spadesuit$/2$\spadesuit$/3$\spadesuit$/4$\spadesuit$ = to play/limit raises/to play.
@@ -495,9 +516,7 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 	\item 4$\heartsuit$ = to play
 	\end{itemize}
 
-\newpage
-
-\item 1$\heartsuit$ if not denying $\heartsuit$:
+\item 1$\heartsuit$ (if not denying $\heartsuit$, Level 5):
 	\begin{itemize}
    \item 1$\spadesuit$ = forcing enquiry.
 		\begin{itemize}
@@ -529,9 +548,31 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 	\item 4$\heartsuit$ = to play
 	\end{itemize}
 
-\newpage
+\item 1$\heartsuit$ (Level 4):
+	\begin{itemize}
+	\item 1$\spadesuit$ = forcing enquiry.
+		\begin{itemize}
+      \item 1NT = both majors. Continuations as after artificial 1NT opening \xref{sec:resp:1nart}.
+      \item 2$\clubsuit$ = 5+ hearts and 4+ clubs
+      \item 2$\diamondsuit$ = 5+ hearts and 4+ diamonds
+      \item 2$\heartsuit$ = 6+ hearts, no outside suit
+		\end{itemize}
+   \item 1NT = 6-9 no better bid.
+   \item 2$\heartsuit$/3$\heartsuit$/4$\heartsuit$ = to play/limit raise/to play.
+   \item 2$\clubsuit$/$\diamondsuit$/$\heartsuit$ = natural, forcing.
+   \item 2NT = good raise
+		\begin{itemize}
+		\item 3x = long suit trial
+		\item 3$\heartsuit$ = minimum
+		\item 3$\spadesuit$/4$\clubsuit$/$\diamondsuit$ = cue, slam try
+		\item 4$\heartsuit$ = extras, no cue or trial
+		\end{itemize}
+   \item 2$\spadesuit$/3$\clubsuit$/3$\diamondsuit$ = fit jump.
+   \item 3$\spadesuit$/4$\clubsuit$/$\diamondsuit$/ = splinter
+	\end{itemize}
 
-\item 1$\spadesuit$:
+
+\item 1$\spadesuit$ (Level 5):
 	\begin{itemize}
    \item 2$\heartsuit$/3$\heartsuit$/4$\heartsuit$ = to play/limit raise/to play.
    \item 1NT = 1-round force.
@@ -550,6 +591,23 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
    \item 3$\spadesuit$/4$\clubsuit$/$\diamondsuit$ = splinter agreeing hearts
    \item 4$\spadesuit$ = to play
 	\end{itemize}
+
+\item 1$\spadesuit$ (Level 4):
+	\begin{itemize}
+   \item 1NT = 6-9 no better bid.
+   \item 2$\spadesuit$/3$\spadesuit$/4$\spadesuit$ = to play/limit raise/to play.
+   \item 2$\clubsuit$/$\diamondsuit$/$\heartsuit$ = natural, forcing.
+   \item 2NT = good raise
+		\begin{itemize}
+		\item 3x = long suit trial
+		\item 3$\spadesuit$ = minimum
+		\item 4$\clubsuit$/$\diamondsuit$/$\diamondsuit$ = cue, slam try
+		\item 4$\spadesuit$ = extras, no cue or trial
+		\end{itemize}
+   \item 3$\clubsuit$/3$\diamondsuit$/$\heartsuit$ = fit jump.
+   \item 4$\clubsuit$/$\diamondsuit$/$\heartsuit$ = splinter
+	\end{itemize}
+
 
 \subsubsection{Natural 1NT}
 \label{sec:resp:1nnat}
@@ -1242,27 +1300,34 @@ Therefore, we have a fairly natural overcall style.
 \subsection{Natural suits}
 \label{sec:def:1x}
 
+\subsubsection{Simple overcalls}
 Simple overcalls are constructive and natural 5 cards, starting at
 10HCP~\orange{11N2}. In response, if 1N is available, then 2N is a crypto
 raise~\xref{sec:encryption}. In all cases a responsive cue is a good raise and
 direct raises are preemptive.
 
-Double is standard takeout (or a strong hand)~\orange{11N3}.
+\subsubsection{Double}
+Double is standard takeout (or a strong hand)~\orange{11N3}. After a double and
+a response, a cue by the doubler is a general force, not suit agreeing.
 
+\subsubsection{NT overcall}
 Direct 1NT is 15-17 balanced with a stop or semi-balanced and may contain a
 singleton ace~\orange{11N8}, protective 1NT is 11-14 with a stop.  After these
 ``Continuations after 1NT''~\xref{sec:resp:1n} apply, with the exception that
 after the auction (1x)-1N-(2y), 2x is stayman without a stop if available.
 Other bids are lebensohl \xref{sec:resp:lebensohl}.
 
+\subsubsection{Jump overcalls}
 Jump overcalls are weak, showing a 6 card suit and between 4HCP (favourable)
 and enough to make a simple overcall. In protective they are intermediate
 (11-15, reasonable 6+ card suit). This also applies after the sequence (Pass)-Pass-(1N).
 
+\subsubsection{Jump cue bids}
 Jump cuebids are stopper-asking for 3NT \orange{11N17}; they promise a long
 running suit.  An overcall of 3NT promises a long running suit and a stopper.
 Responses are the same as a gambling 3NT opening~\xref{sec:resp:higher}.
 
+\subsubsection{2-suited overcalls}
 
 Simple cuebids are Michaels showing at least 5--5 in the majors (over a minor)
 or the other major and either minor (over a major) \orange{11N7}. In all cases they are
@@ -1468,7 +1533,7 @@ is natural. \orange{11M2}
 Dixon \orange{11Q2}:
 
 \begin{itemize}
-\item X: 16+
+\item X: 16+ or 13-15 bal
 \item 2$\heartsuit$/$\spadesuit$: takeout of the other major
 \item 2N: 16-18 bal, stops in both majors.
 	\begin{itemize}
@@ -1579,6 +1644,10 @@ suit then it asks for the lead of a different suit.
    \item Exception: cheapest bid (or 2$\spadesuit$ over 1$\spadesuit$) shows a 12-15 balanced hand with no stop.  System is on, including Keri, transfers etc.  After 1$\clubsuit$-(1$\diamondsuit$)-1$\heartsuit$, for example, 1$\spadesuit$ is a range enquiry or transfer to $\clubsuit$. See \xref{sec:resp:1n} or \xref{sec:resp:2n}.
    \item Pass is a weak hand with nowhere to go (potentially including an 8--11 balanced hand with no stop).
 	\end{itemize}
+\item 1$\clubsuit$-(1N)-P-P:
+	\begin{itemize}
+	\item 2N = minors
+	\end{itemize}
 \end{itemize}
 
 \subsubsection{Direct interference over 1$\diamondsuit$}
@@ -1650,11 +1719,11 @@ Responses:
 
 \end{itemize}
 
-\subsubsection{Doubles of 1-major}
+\subsubsection{Interference over 1-major}
 \label{sec:intf:1M}
 
 \begin{itemize}
-\item 1$\heartsuit$-(X):
+\item 1$\heartsuit$-(X) (Level 5):
 	\begin{itemize}
 	\item Pass = dross
 	\item XX = 4 hearts and starts a penalty (but not forcing pass) auction
@@ -1669,8 +1738,7 @@ Responses:
 	\item 1$\spadesuit$ = to play
 	\item Other bids system on.
 	\end{itemize}
-\newpage
-\item 1$\spadesuit$-(X):
+\item 1$\spadesuit$-(X) (Level 5):
 	\begin{itemize}
 	\item Pass = dross
 	\item XX = 5 spades and starts a penalty (but not forcing pass) auction
@@ -1681,6 +1749,12 @@ Responses:
 		\item 2$\heartsuit$ = 6+$\heartsuit$
 		\end{itemize}
 	\end{itemize}
+\item 1$\heartsuit$/$\spadesuit$-(2x):
+	\begin{itemize}
+	\item 2N = balanced, 10-12 with a stop
+	\item 3x = good raise
+	\end{itemize}
+	 
 \end{itemize}
 
 \subsection{Interference after an artificial 1NT}
