fix response structure to 2D-2N

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -710,9 +710,9 @@ weak takeout.
    \item 2NT = F1, how good are your hearts?
 		\begin{itemize}
       \item 3$\clubsuit$ = two-suited.
-      \item 3$\diamondsuit$ = GF opening.
-      \item 3$\heartsuit$ = dire, single-suited.
-      \item 3$\spadesuit$ = good, single-suited, points spread.
+      \item 3$\diamondsuit$ = dire, single-suited.
+      \item 3$\heartsuit$ = good, single-suited, points spread.
+      \item 3$\spadesuit$ = GF opening.
       \item 3NT = good, single-suited, running suit
 		\end{itemize}
 	\item 3$\diamondsuit$ = GF enquiry
