--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -1775,7 +1775,7 @@ Responses:
 \end{itemize}
 
 
-\subsubsection{Interference over a 2-level opening}
+\subsection{Interference over a 2-level opening}
 \label{sec:intf:2level}
 
 A few general principles here:
@@ -1802,8 +1802,12 @@ A few general principles here:
 \item 2x-(p)-relay-(X):
    \begin{itemize}
 	\item Pass = weak single suiter
-	\item XX = weak 2 suiter
-	\item 2N = GF two suiter
+	\item Cheaper of two suits = weak 2 suiter, prefer cheaper suit
+	\item XX = weak 2 suiter, prefer other suit
+	\item 2N (x = clubs) = 20-23 bal
+	\item 2N (x \not= clubs) = GF, prefer cheaper suit
+	\item Other of two suits = GF, prefer other suit
+	\item Jump cheaper suit (x = clubs) = GF, prefer cheaper suit
    \end{itemize}
 \item 2N-(x):
    \begin{itemize}
