--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -94,7 +94,7 @@ in advance. Suggested defences are given in Appendix \ref{appx:defences}.
 \subsubsection{EBU Level 3 / WBF Category 3 variation}
 
 Modifications to the system to be permitted at both EBU Level 3 and WBF
-Category 3 events (as a Red system) are provided in Section \ref{level3}.
+Category 3 events (as a Red system) are provided in Section \ref{sec:level3}.
 
 \newpage
 
@@ -1835,10 +1835,10 @@ A few general principles here:
 	\item Pass = weak single suiter
 	\item Cheaper of two suits = weak 2 suiter, prefer cheaper suit
 	\item XX = weak 2 suiter, prefer other suit
-	\item 2N (x = clubs) = 20-23 bal
-	\item 2N (x \not= clubs) = GF, prefer cheaper suit
+	\item 2N ($x = \clubsuit$) = 20-23 bal
+	\item 2N ($x \neq \clubsuit$) = GF, prefer cheaper suit
 	\item Other of two suits = GF, prefer other suit
-	\item Jump cheaper suit (x = clubs) = GF, prefer cheaper suit
+	\item Jump cheaper suit ($x = \clubsuit$) = GF, prefer cheaper suit
    \end{itemize}
 \item 2N-(x):
    \begin{itemize}
