--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -465,14 +465,14 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 			\item $\diamondsuit$ = hearts or spades and clubs
 			\item $\heartsuit$ = spades or the minors
 			\item $\spadesuit$ = clubs or hearts and diamonds
-			\item NT = non-touching two suiter
+			\item 2NT = non-touching two suiter
 			\end{itemize}
-		\item Could be 3-suited, short in the suit above. These are shown: 
+		\item Could be 3-suited, short in the suit bid. These are shown: 
 			\begin{itemize}
          \item 2$\clubsuit$-2$\diamondsuit$-3$\clubsuit$: short clubs.
 			\item 2$\diamondsuit$-2$\heartsuit$-2$\diamondsuit$: short diamonds. 
 			\item 2$\heartsuit$-2$\spadesuit$-3$\heartsuit$: short hearts.
-         \item 2$\spadesuit$-3$\clubsuit$-3$\spadesuit$: short spades.
+         \item 2$\spadesuit$-2NT-3$\spadesuit$: short spades.
 			\end{itemize}
 		\item Continuations:
 			\begin{itemize}
@@ -480,9 +480,11 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 				single-suited hand, the longer suit with the two-suited option or as above with
 				the three-suiter. After 2NT, 3C asks which option (longer suit or 3NT with longer clubs)
 				and other suits are swiss-or-correct below game or pass-or-correct above.
-			\item After GF+ suit agreement with a 3-suiter, 3N by opener shows no wish to make
-				a slam try. Bidding the short suit shows a void and bidding a long suit shows
-				a significantly better suit.
+			\item After showing a 3-suiter, responder bids 3NT to play or a suit at the lowest level
+				to agree the suit and make a slam try, or a suit at game to play.
+			\item After GF+ suit agreement with a 3-suiter if Swiss is still available then 
+				4$\clubsuit$/$\diamondsuit$ is Swiss \xref{sec:swiss}, otherwise suit bids are
+				first round controls. 4NT is RKCB \xref{sec:rkcb}.
 			\item After 1$\diamondsuit$-1x and showing suit(s) by opener, bidding 4$\clubsuit$/$\diamondsuit$
 				is Swiss \xref{sec:swiss} agreeing opener's most recently bid suit, bidding one of the other suits below 
 				game is slam inviting asking opener to bid swiss for that suit. Other suits below 3NT are an enquiry
@@ -876,9 +878,13 @@ weak takeout.
 \label{sec:resp:1n}
 
 
-This refers only to a natural 1NT, though it may be 9--11, 12--15 or 16--19
-depending on route. Maximum is an 11-count, 14--15-count, or 18--19-count
-depending on range.
+This refers only to a natural 1NT, though it may be 9--11, 11--13, 12--15,
+14--16, or 16--19 depending on position, vulnerability and auction so far.
+Maximum is an 11-count, good 12--13-count, 14--15-count, good 14--15-count or
+18--19-count depending on range.
+
+After a 9--15 no trump, or a NV 12--15 no trump (NV 3rd and 4th respectively),
+or after 1$\clubsuit$--1$\diamondsuit$--1NT, all bids are natural and to play.
 
 \begin{itemize}
 
@@ -1169,20 +1175,6 @@ and the king of the agreed suit. Responses are:
 \item 5$\heartsuit$: 2 or 5 key cards without the queen of trumps
 \item 5$\spadesuit$: 2 or 5 key cards with the queen of trumps
 \end{itemize}
-
-\subsection{Blackwood}
-\label{sec:blackwood}
-
-When no suit has/can be agreed, we play a modified form of RKCB which only asks
-for the four aces and has the following responses:
-
-\begin{itemize}
-\item 5$\clubsuit$: 0 or 3 aces
-\item 5$\diamondsuit$: 1 or 4 aces
-\item 5$\heartsuit$: 2 aces
-\end{itemize}
-
-5$\spadesuit$ is always available as a sign-off in 5N.
 
 \newpage
 
