system card updates

--- a/defences.tex
+++ b/defences.tex
@@ -8,7 +8,7 @@ defences to our system, but there are probably several better ones.
 \subsection{1 level bids}
 
 \begin{itemize}
-\item 1$\clubsuit$
+\item 1\clubs
 	One of the following:
 	\begin{itemize}
 	\item Your defence to a possibly short club or diamond
@@ -16,33 +16,33 @@ defences to our system, but there are probably several better ones.
 	\item Your defence to a natural club opening 
 	\item Your defence to a polish club
 	\end{itemize}
-\item 1$\diamondsuit$
+\item 1\diamonds
 	\begin{itemize}
 	\item Defend the same as you would a strong (e.g. precision) club
 	\end{itemize}
-\item 1$\heartsuit$ (Level 5 only)
+\item 1\hearts (Level 5 only)
 	\begin{itemize}
 	\item X = a heart overcall
-	\item 1$\spadesuit$ = takeout of spades
+	\item 1\spades = takeout of spades
 	\item 1N = normal 1N overcall range showing a spade stop
 	\item suits = natural overcalls
-	\item 2$\spadesuit$ = whatever a cue of a natural 1 spade would mean 
+	\item 2\spades = whatever a cue of a natural 1 spade would mean 
 	\item Jump bids = normal jump-overcall range
 	\end{itemize}
-\item 1$\spadesuit$ (Level 5 only)
+\item 1\spades (Level 5 only)
 	\begin{itemize}
 	\item X = takeout of hearts
 	\item 1N = normal 1N overcall range showing a heart stop
 	\item suits = natural overcalls
-	\item 2$\heartsuit$ = whatever a cue of a natural 1 heart would mean 
+	\item 2\hearts = whatever a cue of a natural 1 heart would mean 
 	\item Jump bids = normal jump-overcall range
 	\end{itemize}
 
 \item 1NT (Artificial only)
 	\begin{itemize}
 	\item X = clubs and diamonds
-	\item 2$\clubsuit$/$\diamondsuit$ = natural overcall
-	\item 2$\heartsuit$/$\spadesuit$ = asking for a stop for NT
+	\item 2\clubs/\diamonds = natural overcall
+	\item 2\hearts/\spades = asking for a stop for NT
 	\item 2NT = decent NT overcall range with stops in both majors
 	\item Jump bids = normal jump-overcall range
 	\end{itemize}
@@ -51,13 +51,13 @@ defences to our system, but there are probably several better ones.
 \subsection{2 level bids}
 
 \begin{itemize}
-\item 2$\clubsuit$/$\diamondsuit$/$\heartsuit$
+\item 2\clubs/\diamonds/\hearts
 	\begin{itemize}
 	\item X = an overcall in the suit bid
 	\item suits = natural overcalls
 	\item 2N = normal 2N over a weak-two range with some values in the other three suits
 	\end{itemize}
-\item 2$\spadesuit$
+\item 2\spades
 	\begin{itemize}
 	\item X = takeout of hearts
 	\item 2N = normal 2N over a weak-two range with a decent heart stop
@@ -66,21 +66,21 @@ defences to our system, but there are probably several better ones.
 \item 2NT
 	\begin{itemize}
 	\item X = takeout (showing hearts and clubs)
-	\item 3$\clubsuit$/$\heartsuit$ = natural overcalls
-	\item 3$\diamondsuit$/$\spadesuit$ = asking for a stop for 3NT
+	\item 3\clubs/\hearts = natural overcalls
+	\item 3\diamonds/\spades = asking for a stop for 3NT
 	\end{itemize}
 \end{itemize}
 
 \subsection{3/4 level bids}
 
 \begin{itemize}
-\item 3$\clubsuit$/$\diamondsuit$/$\heartsuit$
+\item 3\clubs/\diamonds/\hearts
 	\begin{itemize}
 	\item X = an overcall in the suit bid
 	\item next suit = takeout of that suit
 	\item 3N = normal 3N over a 3-level preempt with a stop in the suit shown (not bid)
 	\end{itemize}
-\item 3$\spadesuit$
+\item 3\spades
 	\begin{itemize}
 	\item X = spade overcall (as of a 3-minor preempt or gambling 3N opening)
 	\item suits = natural overcalls (as of a 4-minor preempt or gambling 3N opening)
@@ -90,7 +90,7 @@ defences to our system, but there are probably several better ones.
 	\item X = both majors (takeoutish)
 	\item suits = natural overcalls (as of a 4-minor preempt)
 	\end{itemize}
-\item 4$\clubsuit$/$\diamondsuit$
+\item 4\clubs/\diamonds
 	\begin{itemize}
 	\item X = an overcall in the suit bid (as of a 3-major preempt)
 	\item suits = natural overcalls (as of a 3-major preempt)
