--- a/prepareddefences.tex
+++ b/prepareddefences.tex
@@ -23,6 +23,8 @@
 \author{Matthew Johnson\\Henry Lockwood}
 \title{Prepared defences for Pascal's Encrypted Club}
 
+\input{defines}
+
 \begin{document}
 
 \def\thesection{\Alph{section}}
