--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -171,7 +171,7 @@ One of the following \orange{11C11}:
 \paragraph{1\hearts~(Level 4)}
 
 \begin{itemize}
-\item 10--15 points, not balanced, 5+ hearts, may contain a longer minor (possible canape) \orange{11C15}.
+\item 10--15 points, not balanced, 4+ hearts, may contain a longer minor (possible canape) \orange{11C15}.
 \end{itemize}
 }
 
@@ -343,14 +343,17 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
    \item 1\diamonds = 0--5, no 6-card suit
 		\begin{itemize}
       \item suits = unbalanced, possible canape
-      \item 1NT (3\textsuperscript{rd}) = 10--15, 5--4 minors
-      \item 1NT (4\textsuperscript{th}) = 12--15 balanced; responses weak takeout.
+      \item 1NT = 10--15, 5--4 minors
 		\end{itemize}
    \item 1\hearts = 6--8, no 6-card suit
 		\begin{itemize}
+      \item 1\spades = any 10-11
+			\begin{itemize}
+			\item 1NT = balanced, no interest in game. Responses are weak takeout.
+			\item suits = natural, NF
+			\end{itemize}
       \item suits = unbalanced, possible canape
-      \item 1NT (3\textsuperscript{rd}) = 10--15, 5--4 minors
-      \item 1NT (4\textsuperscript{th}) = 12--15 balanced; responses weak takeout.
+      \item 1NT = 12--15, 5--4 minors
 		\end{itemize}
    \item 1\spades/1N/2x = two-under transfer weak jump shift 6+ card suit two-above
 		\begin{itemize}
@@ -366,17 +369,16 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
    \item 1\diamonds = 0--8, no 6-card suit
 		\begin{itemize}
       \item suits = unbalanced, possible canape
-      \item 1NT = 12--15 balanced; responses weak takeout.
+      \item 1NT = 10--15, 5--4 minors
 		\end{itemize}
    \item 1\hearts = 9-11
 		\begin{itemize}
       \item 1\spades = any 10-11
 			\begin{itemize}
 			\item 1NT = balanced, no interest in game. Responses are weak takeout.
-			\item suits = natural, F1
-			\item 2N = balanced, 13-15. Responses see ``Continuations after 2NT" \xref{sec:resp:2n}
+			\item suits = natural, NF
 			\end{itemize}
-      \item 1NT = 12--15 balanced; see ``Continuations after 1NT" \xref{sec:resp:1n}.
+      \item 1NT = 12--15, 5--4 minors
       \item major suit bids 12-15 unbal and promise exactly 4; either 4-4-4-1
             with singleton other major or has a longer minor (as there's no other
             hand shape that fits the opening and has exactly one 4-card major)
@@ -605,7 +607,7 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 \subsubsection{Natural 1NT}
 \label{sec:resp:1nnat}
 
-If 1NT is natural not in third-seat non-vulnerable then the responses are
+If 1NT is natural and not in 3rd/4th non-vulnerable then the responses are
 detailed in the section ``Continuations after 1NT" \xref{sec:resp:1n}.
 
 In the case of the third- or fourth-seat non-vulnerable 1NT the responses are
@@ -766,7 +768,7 @@ weak takeout.
 		\begin{itemize}
       \item After weak preference/raise, any rebid shows GF hand.
 		\end{itemize}
-   \item 3\clubs/3\hearts = transfer preference; stronger.
+   \item 3\clubs/3\hearts = transfer preference; invitational.
 		\begin{itemize}
       \item Opener breaks transfer if GF two-suiter; suit has been set so bid controls.
       \item A 3NT rebid shows 24+ balanced
@@ -777,6 +779,7 @@ weak takeout.
          \item 5N = Quantitative (for 6 or 7)
 			\end{itemize}
 		\end{itemize}
+   \item 4\clubs/4\hearts = transfer preference; mixed raise.
 	\end{itemize}
 
 \newpage
@@ -868,7 +871,7 @@ weak takeout.
 This refers only to a natural 1NT, though it may be 9--11, 11--13, 12--13,
 12--15, 14--16, 16--19 or 17--19 depending on position, vulnerability and
 auction so far.  Maximum is an 11-count, good 12--13-count, 13-count,
-14--15-count, good 14--15-count, good 18--19-count or 18--19-count depending on
+14--15-count, good 15--16-count, good 18--19-count or 18--19-count depending on
 range.
 
 After a 9--15 no trump, or a NV 12--15 no trump (NV 3rd and 4th respectively),
@@ -1328,8 +1331,7 @@ Therefore, we have a fairly natural overcall style.
 
 \subsubsection{Simple overcalls}
 Simple overcalls are constructive and natural 5 cards, starting at
-10HCP~\orange{11N2}. In response, if 1N is available, then 2N is a crypto
-raise~\xref{sec:encryption}. In all cases a responsive cue is a good raise and
+10HCP~\orange{11N2}. A responsive cue is a good raise and
 direct raises are preemptive.
 
 \subsubsection{Double}
@@ -1695,7 +1697,7 @@ suit then it asks for the lead of a different suit.
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{Balancing-seat interference (e.g. 1\diamonds-(P)-1\spades-(2\clubs))}
+\subsubsection{Sandwich-seat interference (e.g. 1\diamonds-(P)-1\spades-(2\clubs))}
 \label{sec:intf:bal}
 
 \begin{itemize}
